tests/sksl/errors/ArrayTooManyDimensionsInFuncBody.dsl.glsl
### Compilation failed:

error: multi-dimensional arrays are not supported
error: expected ';', but found ']'

1 error
